apply plugin: 'java'

group = pluginGroup
version = pluginVersion

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    maven {
        name = 'papermc-repo'
        url = 'https://papermc.io/repo/repository/maven-public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
}

configurations {
    extraLibs
    testCompile.extendsFrom compileOnly
}


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
    extraLibs group: 'com.google.inject', name: 'guice', version: '4.2.2'
    configurations.compile.extendsFrom(configurations.extraLibs)
    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
}

jar {
    from {
        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
    }
}


import org.apache.tools.ant.filters.ReplaceTokens

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}

tasks.register("moveToServerFolder") {
    doLast {
        pathToServer = project.hasProperty('pathToServer') ? project.property('pathToServer') : 'nosuchgroup'
        print "Plugin location: " + pathToServer + "/plugins/" + project.name + "-" + version + ".jar"
        ant.move(file: buildDir.getAbsolutePath() + "/libs/" + project.name + "-" + version + ".jar", tofile: pathToServer + "/plugins/" + project.name + "-" + version + ".jar")
    }
}

